--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==2.1.5
 multidict==6.0.5
 psycopg2-binary==2.9.9
 pydantic==2.8.2
+pydantic-settings==2.4.0
 pydantic_core==2.20.1
 python-dotenv==1.0.1
 sniffio==1.3.1
