--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,24 +4,43 @@ services:
     build: ./
     depends_on:
       - db
-    command: bash -c 'while !</dev/postgres/db/5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0'
+    command: >
+      bash -c 'until pg_isready -h db -p 5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0 --port 8000'
     volumes:
       - ./app:/src/app
     ports:
-      - "8000:8000"
+      - ${APP_HOST_PORT}:8000
     restart: always
     env_file:
       - .env
+    networks:
+      - my_network
 
   db:
     container_name: my_db
-    image: postgres
+    image: postgres:16
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - "5431:5432"
+      - ${POSTGRESS_DB_HOST_PORT}:5432
     volumes:
-      - .postgres:/var/lib/postgresql/data
+      - .postgres:/var/lib/postgres/data
     restart: always
+    networks:
+      - my_network
+    
+  tg_bot:
+    build: ./
+    container_name: my_bot
+    command: ["python3", "app/api/tg_bot.py"]
+    networks:
+      - my_network
+    env_file:
+      - .env
+    restart: always
+
+networks:
+  my_network:
+    driver: bridge
